<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="8dp"
            android:scrollbars="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/nomeOngId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nome"
                    android:inputType="text" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/cnpjOngId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/cnpj"
                    android:inputType="text" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/enderecoOngId"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/endereco"
                    android:inputType="text" />

            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/cepOngId"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/cep"
                    android:inputType="number" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/cidadeOngId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/cidade"
                    android:inputType="text" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/estadoOngId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/estado"
                    android:inputType="text" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/telefoneOngId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/telefone"
                    android:inputType="number" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/emailOngId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/propositoOngId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/proposito"
                    android:inputType="textEmailAddress" />

            </android.support.design.widget.TextInputLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center|start"
                android:id="@+id/checkbox_container"
                android:orientation="vertical"
                android:padding="4dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/causas"
                    android:textSize="18sp" />

                <CheckBox
                    android:id="@+id/animalOngId"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:onClick="onCheckboxClickedOng"
                    android:padding="4dp"
                    android:text="@string/animal" />

                <CheckBox
                    android:id="@+id/criancaOngId"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:onClick="onCheckboxClickedOng"
                    android:padding="4dp"
                    android:text="@string/crianca" />

                <CheckBox
                    android:id="@+id/idosoOngId"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:onClick="onCheckboxClickedOng"
                    android:padding="4dp"
                    android:text="@string/idoso" />

                <CheckBox
                    android:id="@+id/refugiadoOngId"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:onClick="onCheckboxClickedOng"
                    android:padding="4dp"
                    android:text="@string/refugiado" />

                <CheckBox
                    android:id="@+id/meioAmbienteOngId"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:onClick="onCheckboxClickedOng"
                    android:padding="4dp"
                    android:text="@string/meioAmbiente" />

                <CheckBox
                    android:id="@+id/empoderamentoFemininoOngId"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:onClick="onCheckboxClickedOng"
                    android:padding="4dp"
                    android:text="@string/empoderamentoFeminino" />

                <CheckBox
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="4dp"
                    android:text="Cegueira"
                    android:id="@+id/cegueiraOngId"
                    android:onClick="onCheckboxClickedOng"/>

                <CheckBox
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="4dp"
                    android:text="Paralisia Cerebral"
                    android:id="@+id/paralisiaCerebralOngId"
                    android:onClick="onCheckboxClickedOng"/>

            </LinearLayout>

            <TextView
                android:id="@+id/cadastrarOngId"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/button_shape"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:padding="12dp"
                android:text="Cadastrar"
                android:textColor="@color/colorPrimary"
                android:textSize="21sp" />

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</LinearLayout>
