<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:gravity="center"
    android:orientation="vertical"
    android:weightSum="1"
    tools:context="com.mudeomundo.aplicativo.mudeomundo.controller.MainActivity">


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/editTextNomeId"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="14dp"
        android:layout_weight="0.32"
        app:srcCompat="@drawable/logo_mude_captura" />

    <TextView
        android:id="@+id/botaoLogar"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textViewNaoECadastradoId"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="28dp"
        android:background="@drawable/button_shape"
        android:backgroundTint="@color/colorPrimaryDark"
        android:elevation="1dp"
        android:gravity="center"
        android:padding="15dp"
        android:text="@string/login"
        android:textColor="@android:color/white"
        android:textColorLink="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textViewNaoECadastradoId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="12dp"
        android:layout_marginStart="12dp"
        android:layout_weight="0.08"
        android:elevation="1dp"
        android:gravity="center_horizontal"
        android:onClick="abrirCadastroUsuario"
        android:text="@string/cadastro"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="25sp"
        android:textStyle="bold" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </android.support.design.widget.TextInputLayout>

    <EditText
        android:id="@+id/editTextPasswordId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/botaoLogar"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="42dp"
        android:hint="@string/senha"
        android:text="123456"
        android:inputType="textPassword"
        android:textColor="@color/colorPrimaryDark" />

    <EditText
        android:id="@+id/editTextNomeId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editTextPasswordId"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="30dp"
        android:hint="@string/email"
        android:inputType="text"
        android:text="juli@juli.com"
        android:textColor="@color/colorPrimaryDark" />

</RelativeLayout>
